<resources>
    <string name="app_name">Inventario Sena</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inventario Sena-La Samaria</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_usuario">Usuario</string>
    <string name="menu_asignar_Inventario">Asignar_Inventario</string>
    <string name="menu_consultar_Cuentadantes">consultar_Cuentadantes</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Consultas Cuentadantes</string>
    <string name="Rol">Rol</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Recuperar_contraseña">Recuperar Contraseña</string>
    <string name="Ingresar_Usuario">E-mail</string>
    <string name="Ingresar_Contraseña" />
    <string name="Titulo">Login</string>
    <string name="Email">E-mail</string>
    <string name="Texto">Ingrase_E-mail</string>
    <string name="Enviar">Recuperar</string>
    <string name="textV">¿Olvidaste tu contraseña?</string>
    <string name="IngresaCorre">Ingresa tu E-mail</string>
    <string name="EnviarN">Enviar</string>
    <string name="Nombre_Cuentadante">Nombre</string>
    <string name="Consultar_Cuentadante">Consultar Cuentadante</string>
    <string name="Marca_cuentadante">Marca</string>
    <string name="se">Serial</string>
    <string name="equi">equipo</string>
    <string name="re">Registras</string>
    <string name="Codi">Codigo</string>
    <string name="Zon">Zona</string>
    <string name="Regis">Registro</string>
    <string name="Nomb">Nombre</string>
    <string name="RAmbiente">Ambiente</string>
    <string name="Usuarios" />
    <string name="R_Usuario">Crear Usuario</string>
    <string name="Registrar_Usuario">Registrar Usuario</string>
    <string name="Asignar_Inventario">Asignar Inventario</string>
    <string name="Registrar_Ambiente">Registrar Ambiente</string>
    <string name="communicate">Communicate</string>
    <string name="Registrar_Activos">Registrar Activos</string>
    <string name="consultar_inventario">Consultar Inventario</string>
    <string name="registrar_prestamo">Registrar Prestamo</string>
    <string name="registrar_devolucion">Registrar Devolucion</string>
    <string name="action_settings">Cerrar Sesion</string>
    <string name="Cantidad_Activo">Cantidad</string>
    <string name="Serial_Activo">Serial</string>
    <string name="Registrar_Activos_Bottom">Registrar</string>
    <string name="pantallainicio">Inicio</string>


    <string name="btn_crear">CREAR</string>
    <string name="btn_actualizar">ACTUALIZAR</string>
    <string name="btn_reporte">REPORTE</string>
    <string name="btn_eliminar">ELIMINAR</string>
    <string name="tx_devo_id">ingrese Id</string>
    <string name="registrar_activos">Registrar Activos</string>
    <string name="tx_devo_nombre">Nombre</string>
    <string name="tx_devo_marca">Marca</string>
    <string name="pres_nom">nombre</string>
    <string name="cedula_pres">Cedula</string>
    <string name="regis_prestamo">Registro_Pres</string>
    <string name="Nombre_RPrestamo">Nombre</string>
    <string name="RPrestamo">Serial</string>
    <string name="Marca_RPrestamo">Marca</string>
    <string name="Cantidad_RPrestamo">Cantidad</string>
    <string name="bottom_RPrestamo">Registrar</string>
    <string name="bottom_ReporteP">Reporte</string>
    <string name="bottom_EditarP">Editar</string>
    <string name="bottom_EliminarP">Eliminar</string>

    <string name="Nombre_Ambiente">Nombre</string>
    <string name="Codigo_Ambiente">Codigo</string>
    <string name="Zona_Ambiente">Zona</string>

    <string name="tv_devo_nom">Nombre</string>
    <string name="tv_devo_seri">Serial</string>
    <string name="tv_devo_marca">Marca</string>
    <string name="tv_devo_canti">Cantidad</string>
    <string name="tv_devo_ele">Elemento</string>
    <string name="Registrar_Devolucion">Registrar Devolucion</string>

    <string name="boton_EliminarD">Eliminar</string>
    <string name="boton_registrarD">Registrar</string>
    <string name="boton_ReporteD">Reporte</string>
    <string name="boton_enviarRD">Enviar</string>
    <string name="edit_reporte_rd">ingrese reporte</string>
    <string name="tx_reporte_rd">Reporte Devolucion</string>
    <string name="Correo_Usu">Correo</string>
    <string name="Contraseña_usu">Contraseña</string>
    <string name="Rol_usu">Rol</string>
    <string name="bt_eliminar_devo">Eliminar</string>


    <string name="boton_eliminarpres">Eliminar</string>
    <string name="fragment_cantidad_prestamo" />
    <string name="fragment_cantidad_pres">cantidad</string>
    <string name="fragment_marca_prest">marca</string>
    <string name="fragment_serial_prest">serial</string>
    <string name="fragment_nombre_prest">nombre</string>
    <string name="ConInv">Consultas Inventarios</string>
    <string name="CorreoU">Email</string>
    <string name="Bott">Actualizar</string>
    <string name="todo">TODO</string>
    <string name="Perfil">perfil</string>
    <string name="BottnA">Actiualizar</string>
    <string name="BottnE">Eliminar</string>
    <string name="BottnR">Reportes</string>
    <string name="BottnAsi">Asignar</string>
    <string name="TituloPre">Registar Prestamo</string>
    <string name="TituloIn">Asignar Inventario</string>
    <string name="hiEmail">E-mail  Sena12@gmail.com</string>
    <string name="Password">Password</string>
    <string name="mail">sell12@gmail.com</string>


</resources>
