<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_repo_devo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReporteDevo" >

    <EditText
        android:id="@+id/edit_reporte_rd"
        android:layout_width="334dp"
        android:layout_height="198dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/edit_reporte_rd"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boton_reporteRD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="372dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/boton_enviarRD" />

    <TextView
        android:id="@+id/tx_reporte_rd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="79dp"
        android:text="@string/tx_reporte_rd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>