<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/inventario"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recuperara_Contrasena">


    <TextView
        android:id="@+id/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="144dp"
        android:text="@string/Recuperar_contraseña"
        android:textColor="#FDFFFFFF"
        android:textIsSelectable="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="366dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#FD0A0A0A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="146dp"
        android:layout_height="58dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="#F5F5F5"
        android:text="@string/Enviar"
        android:textColor="#FD030303"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />
</androidx.constraintlayout.widget.ConstraintLayout>