<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cambia"
    android:scrollbarStyle="insideInset"
    tools:context=".Login">


    <Button
        android:id="@+id/buttonIngresar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="33dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="136dp"
        android:background="#433CEBC2"
        android:onClick="Ingresar"
        android:text="@string/Ingresar"
        android:textAllCaps="false"
        android:textColor="#020202"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contraseña" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="93dp"
        android:layout_height="103dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="136dp"
        android:background="#00F9A825"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="207dp"
        android:layout_height="44dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/Recuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:background="#16F0F2F5"
        android:backgroundTint="#C6FFFFFF"
        android:onClick="Recuperar_contrasenia"
        android:text="@string/Recuperar_contraseña"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngresar" />

    <EditText
        android:id="@+id/CampoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/Contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CampoUsuario" />


</androidx.constraintlayout.widget.ConstraintLayout>